{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 10,
  "lineage": "4fbf7790-be84-807d-35fd-5374886ec248",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815617075236:internet-gateway/igw-0185f57a5dcd25e6f",
            "id": "igw-0185f57a5dcd25e6f",
            "owner_id": "815617075236",
            "tags": {
              "Name": "elasticache-lab-igw"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "elasticache-lab-igw",
              "Project": "ElastiCacheCluster"
            },
            "vpc_id": "vpc-094bd354404aab62e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815617075236:route-table/rtb-072c23f31838ab0e3",
            "id": "rtb-072c23f31838ab0e3",
            "owner_id": "815617075236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0185f57a5dcd25e6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elasticache-lab-rt"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "elasticache-lab-rt",
              "Project": "ElastiCacheCluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-094bd354404aab62e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b0744360f81b7c3",
            "route_table_id": "rtb-072c23f31838ab0e3",
            "subnet_id": "subnet-016473c8eed34bdea"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07608e515d3521f0d",
            "route_table_id": "rtb-072c23f31838ab0e3",
            "subnet_id": "subnet-0e8413fd404c89dfa"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815617075236:security-group/sg-0bc8790bcde9ef722",
            "description": "Security group for EC2 ElastiCache client",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc8790bcde9ef722",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-elasticache-client-sg",
            "name_prefix": "",
            "owner_id": "815617075236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-elasticache-client-sg"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ec2-elasticache-client-sg",
              "Project": "ElastiCacheCluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-094bd354404aab62e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815617075236:security-group/sg-0962f7716768a7efc",
            "description": "Security group for ElastiCache cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0962f7716768a7efc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming ElastiCache connections",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11211
              }
            ],
            "name": "elasticache-security-group",
            "name_prefix": "",
            "owner_id": "815617075236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elasticache-sg"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "elasticache-sg",
              "Project": "ElastiCacheCluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-094bd354404aab62e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815617075236:subnet/subnet-016473c8eed34bdea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016473c8eed34bdea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "815617075236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elasticache-lab-subnet-0"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "elasticache-lab-subnet-0",
              "Project": "ElastiCacheCluster"
            },
            "vpc_id": "vpc-094bd354404aab62e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815617075236:subnet/subnet-0e8413fd404c89dfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8413fd404c89dfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "815617075236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elasticache-lab-subnet-1"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "elasticache-lab-subnet-1",
              "Project": "ElastiCacheCluster"
            },
            "vpc_id": "vpc-094bd354404aab62e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815617075236:vpc/vpc-094bd354404aab62e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b785dceca68221d",
            "default_route_table_id": "rtb-0712d0e6c53fb74a0",
            "default_security_group_id": "sg-0b78ace60c9105d8e",
            "dhcp_options_id": "dopt-09b302a8e51a5d4d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094bd354404aab62e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0712d0e6c53fb74a0",
            "owner_id": "815617075236",
            "tags": {
              "Name": "elasticache-lab-vpc"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "elasticache-lab-vpc",
              "Project": "ElastiCacheCluster"
            }
          }
        }
      ]
    }
  ]
}